[a36b99b4286c825271650ee94d7cbe3f77e1b944]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -201,19 +201,13 @@ A Braspag acordará um MDR e/ou uma Tarifa Fixa com o Marketplace a serem descon
   <p><strong>Custo Marketplace:</strong> MDR Braspag(%) + Tarifa Fixa(R$)</p>
 </blockquote>
 
-<p><br /></p>
-
-<blockquote>
-  <p>O <strong>MDR(%)</strong> acordado entre um <strong>Marketplace</strong> e um <strong>Subordinado</strong> deve ser sempre maior que o <strong>MDR(%)</strong> acordado entre a <strong>Braspag</strong> e o <strong>Marketplace</strong>.</p>
-</blockquote>
-
 <h4 id="marketplace">Marketplace</h4>
 
 <p><br />
 O Marketplace é responsável por acordar as taxas a serem cobradas dos seus Subordinados, onde deve ser defindo um MDR maior ou igual ao MDR definido entre a Braspag (Facilitador) e o Marketplace e uma Tarifa Fixa, que é opcional.</p>
 
 <blockquote>
-  <p><strong>Custo para o Subordinado:</strong> MDR Marketplace(%) + Tarifa Fixa(R$), onde no MDR Marketplace(%) está embutido o MDR Braspag(%).</p>
+  <p><strong>Custo Subordinado:</strong> MDR Marketplace(%) + Tarifa Fixa(R$), onde o MDR Marketplace(%) considera o MDR Braspag(%).</p>
 </blockquote>
 
 <h3 id="exemplo">Exemplo</h3>
