[e207b529521bd1061026f344f92fefa50f1270f2]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -212,7 +212,8 @@ O Marketplace é responsável por acordar as taxas a serem cobradas dos seus Sub
 
 <h3 id="exemplo">Exemplo</h3>
 
-<p>Uma transação de <strong>R$100,00</strong>, realizada por um <strong>Marketplace</strong> com participação do <strong>Subordinado 01</strong>.</p>
+<p><br />
+Uma transação de <strong>R$100,00</strong>, realizada por um <strong>Marketplace</strong> com participação do <strong>Subordinado 01</strong>.</p>
 
 <p><img src="https://docsbraspag.github.io/SplitBraspag/images/Split/Split000.PNG" alt="Split" /></p>
 
@@ -227,12 +228,12 @@ O Marketplace é responsável por acordar as taxas a serem cobradas dos seus Sub
 Crédito: R$96,20</p>
 
 <p><strong>Marketplace</strong>:<br />
-Crédito: R$1,80<br />
-Débito: R$0,10 (Tarifa Fixa Braspag)</p>
+Crédito: R$1,80 [Já descontado o MDR da Braspag (Facilitador)] 
+Débito: R$0,10 [Tarifa Fixa Braspag]</p>
 
 <p><strong>Braspag (Facilitador)</strong>:<br />
 Crédito: R$2,00<br />
-Crédito: R$0,10 (Tarifa Fixa Braspag)</p>
+Crédito: R$0,10 [Tarifa Fixa Braspag]</p>
 
 <h2 id="integração">Integração</h2>
 
