[31232128a03e3b08349e7b344c652f0e35a5dd20]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -235,6 +235,8 @@ Débito: R$0,10 [Tarifa Fixa Braspag]</p>
 Crédito: R$2,00<br />
 Crédito: R$0,10 [Tarifa Fixa Braspag]</p>
 
+<p>A Tarifa Fixa acordada entre o Marketplace e o Subordinado é calculada diretamente sobre os valores que cada um tem a receber, ou seja, a tarifa é descontada após o cálculo do percentual acordado entre as duas partes. Já a Tarifa Fixa acordada entre a Braspag (Facilitador) e o Marketplace não é descontada do valor da transação, a mesma é sensibilizada na agenda de ambas as partes com um crédito e um débito, respectivamente.</p>
+
 <h2 id="integração">Integração</h2>
 
 <p><br />
