[66dda52f6f99722cf7f90a3a8a56ec9175037ecc]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -225,15 +225,15 @@ Uma transação de <strong>R$100,00</strong>, realizada por um <strong>Marketpla
 <p>Após o split, cada participante terá sua agenda sensibilizada com os seguintes eventos:</p>
 
 <p><strong>Subordinado</strong>:<br />
-Crédito: R$96,20</p>
+Crédito: R$96,20 [Descontados o MDR e a Tarifa Fixa acordados com o Marketplace]</p>
 
 <p><strong>Marketplace</strong>:<br />
-Crédito: R$1,80 [Já descontado o MDR da Braspag (Facilitador)] 
-Débito: R$0,10 [Tarifa Fixa Braspag]</p>
+Crédito: R$1,80 [MDR aplicado sobre o valor do subordinado descontando o MDR acordado com a Braspag (Facilitador)]
+Débito: R$0,10 [Tarifa Fixa acordada com a Braspag (Facilitador)]</p>
 
 <p><strong>Braspag (Facilitador)</strong>:<br />
-Crédito: R$2,00<br />
-Crédito: R$0,10 [Tarifa Fixa Braspag]</p>
+Crédito: R$2,00 [MDR aplicado sobre o valor total da transação] 
+Crédito: R$0,10 [Tarifa Fixa acordad com o Marketplace]</p>
 
 <p>A Tarifa Fixa acordada entre o Marketplace e o Subordinado é calculada diretamente sobre os valores que cada um tem a receber, ou seja, a tarifa é descontada após o cálculo do percentual acordado entre as duas partes. Já a Tarifa Fixa acordada entre a Braspag (Facilitador) e o Marketplace não é descontada do valor da transação, a mesma é sensibilizada na agenda de ambas as partes com um crédito e um débito, respectivamente.</p>
 
