[2fee3ccf1e8ae3100216ad0a42a7cdd24c6be1f2]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -215,7 +215,7 @@ O Marketplace é responsável por acordar as taxas a serem cobradas dos seus Sub
 <p><br />
 Uma transação de <strong>R$100,00</strong>, realizada por um <strong>Marketplace</strong> com participação do <strong>Subordinado 01</strong>.</p>
 
-<p><img src="https://docsbraspag.github.io/SplitBraspag/images/Split/Split000.PNG" alt="Split" /></p>
+<p><img src="https://developercielo.github.io/images/split/split001.png" alt="SplitSample001" /></p>
 
 <p>Neste exemplo, foram assumidos os seguintes acordos:</p>
 
