[6a2534761f2f0c271ec5c980db19efaf58b5e59b]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -159,13 +159,13 @@ O <strong>Split de Pagamentos</strong> permite a divisão de uma transação ent
   <p><strong>Regime de Pagamento</strong>: Prazo estabelecido para liquidação de acordo com o produto (crédito ou débito) e bandeira.<br />
 <br />
 <strong>Crédito</strong>: Em até 31 dias.<br />
-<strong>Crédito</strong> Parcelado: 1º parcela em até 31 dias, demais a cada 30.<br />
-<strong>Débito</strong>: Em até 1 dia útil<br /></p>
+<strong>Crédito Parcelado</strong>: 1º parcela em até 31 dias, demais a cada 30.<br />
+<strong>Débito</strong>: Em até 1 dia útil.<br /></p>
 </blockquote>
 
 <p>Para utilizar o Split de Pagamentos, o Marketplace deverá se cadastrar na Braspag juntamente com seus Subordinados. Após este processo, tanto o Marketplace quanto seus Subordinados possuirão um identificador único, conhecido como <strong>MerchantId (MID)</strong>, que deverá ser utlizado ao informar as regras de divisão de uma transação.</p>
 
-<p>Na divisão de uma transação, deve ser informado:</p>
+<p>Na divisão de uma transação, devem ser informados:</p>
 
 <ul>
   <li>Os <strong>identificadores dos Subordinados</strong>.</li>
