--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -170,7 +170,7 @@ O <strong>Split de Pagamentos</strong> permite a divisão de uma transação ent
 <ul>
   <li>Os <strong>identificadores dos Subordinados</strong>.</li>
   <li>Os <strong>valores de participação de cada Subordinado</strong>. O somatório deverá ser igual ao valor total da transação.</li>
-  <li><strong>Taxas</strong> a serem aplicadas sobre o valor de cada Subordinado que serão destinadas ao Marketplace. Estas deverão ser acordadas previamente entre o Marketplace e o Subordinado.</li>
+  <li>As <strong>Taxas</strong> a serem aplicadas sobre o valor de cada Subordinado que serão destinadas ao Marketplace. Estas deverão ser acordadas previamente entre o Marketplace e o Subordinado.</li>
 </ul>
 
 <p><br /> 
