[06ca3c910ab7e8250c0661b520570a614a628fa6]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -227,7 +227,7 @@ Uma transação de <strong>R$100,00</strong>, realizada por um <strong>Marketpla
 Crédito: R$96,20 [Descontados o MDR e a Tarifa Fixa acordados com o Marketplace]</p>
 
 <p><strong>Marketplace</strong>:<br />
-Crédito: R$1,80 [MDR aplicado sobre o valor do subordinado descontando o MDR acordado com a Braspag (Facilitador)]
+Crédito: R$1,80 [MDR aplicado sobre o valor do subordinado descontando o MDR acordado com a Braspag (Facilitador)]<br />
 Débito: R$0,10 [Tarifa Fixa acordada com a Braspag (Facilitador)]</p>
 
 <p><strong>Braspag (Facilitador)</strong>:<br />
