[17cf273c470573308ad68c4567f9ac69ac106aa9]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -237,7 +237,9 @@ Crédito: R$0,10 [Tarifa Fixa acordada com o Marketplace]</p>
 <h2 id="integração">Integração</h2>
 
 <p><br />
-O Split de Pagamentos é parte da API Cielo E-Commerce, desenvolvida utilizando a arquitetura REST e JSON como mensageria. Para mais informações sobre a API Cielo E-Commerce, consulte o <a href="https://developercielo.github.io/Webservice-3.0/#criando-uma-transação-simples" target="_blank">Manual de Integração</a> da Plataforma.</p>
+O Split de Pagamentos é parte da API Cielo E-Commerce. As operações transacionais continuam sendo realizadas pela API Cielo, sendo necessárias poucas alterações para utlização do Split de Pagamentos.</p>
+
+<p>Para mais informações sobre a API Cielo E-Commerce, consulte o <a href="https://developercielo.github.io/manual/cielo-ecommerce" target="_blank">Manual de Integração</a> da Plataforma.</p>
 
 <p>OBS: Neste manual serão apresentados os contratos de integração da API Cielo E-Commerce, porém o foco da análise será nas operações referentes ao Split de Pagamentos.</p>
 
