[09c14089db239940a27f43cd0bfb9c90b9d0eaeb]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -246,18 +246,18 @@ O Split de Pagamentos é parte da API Cielo E-Commerce. As operações transacio
 <h3 id="ambientes">Ambientes</h3>
 
 <blockquote>
-  <p><strong>SANDBOX</strong></p>
-
-  <p><strong>API Cielo E-Commerce</strong>:<br />
-https://apisandbox.cieloecommerce.cielo.com.br/</p>
-
-  <p><strong>API Cielo E-Commerce (Consulta)</strong>:<br />
-https://apiquerysandbox.cieloecommerce.cielo.com.br/</p>
-
-  <p><strong>API Split</strong>:<br />
-http://splitsandbox.braspag.com.br/</p>
-
-  <p><strong>OAUTH2 Server</strong>:<br />
+  <p><strong>SANDBOX</strong>
+<br />
+<strong>API Cielo E-Commerce</strong>:<br />
+https://apisandbox.cieloecommerce.cielo.com.br/
+<br />
+<strong>API Cielo E-Commerce (Consultas)</strong>:<br />
+https://apiquerysandbox.cieloecommerce.cielo.com.br/
+<br />
+<strong>API Split</strong>:<br />
+http://splitsandbox.braspag.com.br/
+<br />
+<strong>OAUTH2 Server</strong>:<br />
 https://authhomolog.braspag.com.br/</p>
 </blockquote>
 
