[82e5df330661ba46f3e63dc89e9f4f3675c4f24a]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -245,21 +245,21 @@ O Split de Pagamentos é parte da API Cielo E-Commerce. As operações transacio
 
 <h3 id="ambientes">Ambientes</h3>
 
-<blockquote>
-  <p><strong>SANDBOX</strong>
-<br />
-<strong>API Cielo E-Commerce</strong>:<br />
-https://apisandbox.cieloecommerce.cielo.com.br/
-<br />
-<strong>API Cielo E-Commerce (Consultas)</strong>:<br />
-https://apiquerysandbox.cieloecommerce.cielo.com.br/
-<br />
-<strong>API Split</strong>:<br />
-http://splitsandbox.braspag.com.br/
-<br />
-<strong>OAUTH2 Server</strong>:<br />
-https://authhomolog.braspag.com.br/</p>
-</blockquote>
+<h4 id="sandbox">Sandbox</h4>
+
+<p><br />
+<strong>API Cielo E-Commerce</strong>: https://apisandbox.cieloecommerce.cielo.com.br/
+<strong>API Cielo E-Commerce (Consultas)</strong>: https://apiquerysandbox.cieloecommerce.cielo.com.br/
+<strong>API Split</strong>: http://splitsandbox.braspag.com.br/
+<strong>OAUTH2 Server</strong>: https://authhomolog.braspag.com.br/</p>
+
+<h4 id="produção">Produção</h4>
+
+<p><br />
+<strong>API Cielo E-Commerce</strong>: https://api.cieloecommerce.cielo.com.br/
+<strong>API Cielo E-Commerce (Consultas)</strong>: https://apiquery.cieloecommerce.cielo.com.br/
+<strong>API Split</strong>: http://split.braspag.com.br/
+<strong>OAUTH2 Server</strong>: https://auth.braspag.com.br/</p>
 
 <h3 id="autorização">Autorização</h3>
 
