[fa2e4e2fa9dee139b73283623b2a6c6331da8da0]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -248,18 +248,18 @@ O Split de Pagamentos é parte da API Cielo E-Commerce. As operações transacio
 <h4 id="sandbox">Sandbox</h4>
 
 <p><br />
-<strong>API Cielo E-Commerce</strong>: https://apisandbox.cieloecommerce.cielo.com.br/
-<strong>API Cielo E-Commerce (Consultas)</strong>: https://apiquerysandbox.cieloecommerce.cielo.com.br/
-<strong>API Split</strong>: http://splitsandbox.braspag.com.br/
-<strong>OAUTH2 Server</strong>: https://authhomolog.braspag.com.br/</p>
+<strong>API Cielo E-Commerce</strong>: https://apisandbox.cieloecommerce.cielo.com.br/<br />
+<strong>API Cielo E-Commerce (Consultas)</strong>: https://apiquerysandbox.cieloecommerce.cielo.com.br/<br />
+<strong>API Split</strong>: http://splitsandbox.braspag.com.br/<br />
+<strong>OAUTH2 Server</strong>: https://authhomolog.braspag.com.br/<br /></p>
 
 <h4 id="produção">Produção</h4>
 
 <p><br />
-<strong>API Cielo E-Commerce</strong>: https://api.cieloecommerce.cielo.com.br/
-<strong>API Cielo E-Commerce (Consultas)</strong>: https://apiquery.cieloecommerce.cielo.com.br/
-<strong>API Split</strong>: http://split.braspag.com.br/
-<strong>OAUTH2 Server</strong>: https://auth.braspag.com.br/</p>
+<strong>API Cielo E-Commerce</strong>: https://api.cieloecommerce.cielo.com.br/<br />
+<strong>API Cielo E-Commerce (Consultas)</strong>: https://apiquery.cieloecommerce.cielo.com.br/<br />
+<strong>API Split</strong>: http://split.braspag.com.br/<br />
+<strong>OAUTH2 Server</strong>: https://auth.braspag.com.br/<br /></p>
 
 <h3 id="autorização">Autorização</h3>
 
@@ -270,7 +270,7 @@ O Split de Pagamentos é parte da API Cielo E-Commerce. As operações transacio
 <table>
   <thead>
     <tr>
-      <th>=</th>
+      <th> </th>
       <th><strong>Cartão de Crédito</strong></th>
       <th><strong>Cartão de Débito</strong></th>
     </tr>
@@ -292,8 +292,11 @@ O Split de Pagamentos é parte da API Cielo E-Commerce. As operações transacio
 <blockquote>
   <p>Atualmente o Split de Pagamentos está disponivel para os seguintes tipos de pagamento:</p>
   <ul>
-    <li>Cartão de Crédito<br />
-Em breve estarão disponíveis:</li>
+    <li>Cartão de Crédito</li>
+  </ul>
+  <p><br />
+Em breve estarão disponíveis:</p>
+  <ul>
     <li>Cartão de Débito</li>
     <li>Boleto</li>
   </ul>
