--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -263,7 +263,8 @@ O Split de Pagamentos é parte da API Cielo E-Commerce. As operações transacio
 
 <h3 id="autorização">Autorização</h3>
 
-<p>A autorização de uma transação no Split de Pagamentos deve ser realizada através da API Cielo E-Commerce seguindo os mesmos contratos descritos na documentação da plataforma.</p>
+<p><br />
+A autorização de uma transação no Split de Pagamentos deve ser realizada através da API Cielo E-Commerce seguindo os mesmos contratos descritos na documentação da plataforma.</p>
 
 <p>Porém, para indentificar que a transação enviada se trata de uma transação de Split de Pagamentos, deve-se modificar o tipo de pagamento utilizado, conforme abaixo:</p>
 
