[f422ed9fee7ca03dd4c77bd617ccfe7c6652f702]: Added 'images/split/split003.png' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -651,7 +651,7 @@ Em breve estarão disponíveis:</p>
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
 
-<p><img src="https://docsbraspag.github.io/SplitBraspag/images/Split/Split003.PNG" alt="Split" /></p>
+<p><img src="https://developercielo.github.io/images/split/split003.png" alt="SplitSample003" /></p>
 
 <h3 id="modelos-de-split">Modelos de Split</h3>
 
