[2cae28c1889f2ba18e6edacc1db711235a92694d]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -510,7 +510,7 @@ Em breve estarão disponíveis:</p>
 <strong>Taxa Marketplace com o Subordinado 01</strong>: 5% MDR (embutindo os 2% do MDR Braspag) + 0,30 Tarifa Fixa.<br />
 <strong>Taxa Marketplace com o Subordinado 02</strong>: 4% MDR (embutindo os 2% do MDR Braspag) + 0,15 Tarifa Fixa.</p>
 
-<p>** Rquest **</p>
+<p><strong>Request</strong></p>
 
 <aside class="request"><span class="method post">POST</span> <span class="endpoint">{apiCieloECommerceUrl}/1/sales/</span></aside>
 
