--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -653,7 +653,7 @@ Em breve estarão disponíveis:</p>
 
 <p>Abaixo como ficaram as divisões e como foram as agendas de cada participante foram sensibilizadas.</p>
 
-<p><img src="https://developercielo.github.io/images/split/split003.png" alt="SplitSample003" /></p>
+<p><img src="https://developercielo.github.io/images/split/split003.png =800x" alt="SplitSample003" /></p>
 
 <h3 id="modelos-de-split">Modelos de Split</h3>
 
