[95bb4b762db8c05f360d43ad9af7075242a82a0e]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -793,7 +793,7 @@ No Split Transacional é necessário que o Marketplace envie um “nó” adicio
   </tbody>
 </table>
 
-<p><strong>Exemplo</strong></p>
+<p><strong>Exemplo 3)</strong></p>
 
 <p>Transação no valor de <strong>R$100,00</strong> com o nó contendo as regras de divisão e o Marketplace participando da venda.</p>
 
