--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -960,7 +960,7 @@ No Split Transacional é necessário que o Marketplace envie um “nó” adicio
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
 
-<p>Neste exemplo, onde o Marketplace também participa da venda, não é necessário informar as taxas a serem descontadas sobre o valor da venda referente ao próprio marketplace. O Split indentifica o valor informado é do próprio Marketplace, através do seu identificador, e realiza os cáluclo corretamente.</p>
+<p>Neste exemplo, onde o Marketplace também participa da venda, não é necessário informar as taxas a serem descontadas sobre o valor da venda referente ao próprio marketplace. O Split indentifica que o valor informado é do próprio Marketplace, através do seu identificador, e realiza os cálculos corretamente.</p>
 
 <p><img src="https://developercielo.github.io/images/split/split004.png" alt="SplitSample004" /></p>
 
