[4ab6414a54bcab6e63bd53f21095fdae57599a35]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -722,7 +722,7 @@ Em breve estarão disponíveis:</p>
   <p>No Split de Pagamentos a divisão é realizada somente para transações capturadas, ou seja, as regras de divisão só serão consideradas para autorizações com captura automática e no momento da captura de uma transação. Caso seja informado no momento de uma autorização sem captura automática, as regras de divisão serão desconsideradas.</p>
 </blockquote>
 
-<h4 id="split-transacional">Split Transacional</h4>
+<h4 id="transacional">Transacional</h4>
 
 <p><br />
 No Split Transacional é necessário que o Marketplace envie um “nó” adicional na integração da API Cielo E-Commerce, como apresentado em exemplos anteriores, informando as regras de divisão da transação.</p>
@@ -1005,7 +1005,7 @@ No Split Transacional é necessário que o Marketplace envie um “nó” adicio
 
 <p><img src="https://developercielo.github.io/images/split/split004.png" alt="SplitSample004" /></p>
 
-<h4 id="split-pós-transacional">Split Pós-Transacional</h4>
+<h4 id="pós-transacional">Pós-Transacional</h4>
 
 <p><br />
 Neste modelo o Marketplace poderá enviar as regras de divisão da transação após a mesma ser capturada.</p>
