[1345a3af133a11ad8c108c574ea109639fdc1e5b]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -1700,6 +1700,8 @@ No cancelamento parcial, o somatório dos valores cancelados definidos para cada
   </tbody>
 </table>
 
+<h2 id="chargeback">Chargeback</h2>
+
 </div>
 
 
