--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -1448,7 +1448,8 @@ Na captura parcial de uma transação, o somatório dos valores de participaçã
 
 <h3 id="cancelamento">Cancelamento</h3>
 
-<p>Ao cancelar uma transação do Split de Pagamentos o Marketplace deve informar, para um cancelamento parcial, qual o valor deve ser cancelado de cada participante da transação. Para um cancelamento total, esta informação não é necessária, já que será cancelado o valor total e consequentemente o valor total de cada Subordinado.</p>
+<p><br />
+Ao cancelar uma transação do Split de Pagamentos o Marketplace deve informar, para um cancelamento parcial, qual o valor deve ser cancelado de cada participante da transação. Para um cancelamento total, esta informação não é necessária, já que será cancelado o valor total e consequentemente o valor total de cada Subordinado.</p>
 
 <h4 id="cancelamento-total">Cancelamento Total</h4>
 
