[812eef95952cceb1b36c6e358821e1e3362561d3]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -1772,15 +1772,15 @@ O Split de Pgamentos permite consultar a agenda financeira de várias transaçõ
   </tbody>
 </table>
 
-<p>Para informar várias lojas na consulta, basta repetir o parâmetro “merchantIds”.Caso não seja informada nenhuma loja, será considerada a loja utilizada na autenticação à API Split.</p>
+<p>Para informar várias lojas na consulta, basta repetir o parâmetro “merchantIds”. Caso não seja informada nenhuma loja, será considerada a loja utilizada na autenticação à API Split.</p>
 
 <p>Um evento poderá estar em um dos seguintes status na agenda financeira:</p>
 
 <ul>
-  <li><strong>Scheduled</strong>: Agendada</li>
+  <li><strong>Scheduled</strong>: Agendado</li>
   <li><strong>Pending</strong>: Aguardando confirmação de liquidação</li>
-  <li><strong>Settled</strong>: Liquidada</li>
-  <li><strong>Error</strong> - Erro na liquidação na instituição financeira</li>
+  <li><strong>Settled</strong>: Liquidado</li>
+  <li><strong>Error</strong> - Erro de liquidação na instituição financeira</li>
 </ul>
 
 <p><br />
@@ -1970,7 +1970,7 @@ O Split de Pgamentos permite consultar a agenda financeira de várias transaçõ
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Transactions[].Schedules[].InstallmentNumber</code></td>
-      <td>Número da parcela a liquidar</td>
+      <td>Número da parcela a liquidar.</td>
       <td>Inteiro</td>
       <td>-</td>
     </tr>
