[2a5e9b4883d38bd94882887bf80ba7cf14ca4ea5]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -2035,7 +2035,8 @@ O Split de Pgamentos permite consultar a agenda financeira de várias transaçõ
 
 <h3 id="consultar-eventos">Consultar Eventos</h3>
 
-<p>A API Split permite consultar o que uma loja tem a receber dentro de um intervalo de datas.</p>
+<p><br />
+A API Split permite consultar o que uma loja tem a receber dentro de um intervalo de datas.</p>
 
 <aside class="request"><span class="method get">GET</span> <span class="endpoint">/schedules?initialDate={initialDate}&amp;finalDate={finalDate}&amp;pageIndex={pageIndex}&amp;pageSize={pageSize}&amp;scheduleStatus={scheduleStatus}&amp;merchantIds={merchantId}</span></aside>
 
