[1794f58dee7fe61d59bfc494cf8a81854126ad0d]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -1202,7 +1202,8 @@ Ao capturar uma transação do Split de Pagamentos, deve-se informar as regras d
 
 <h4 id="captura-total">Captura Total</h4>
 
-<p>Na captura total de uma transação, o somatório dos valores de participação de cada subordinado deverá ser igual ao valor total da transação enviado no momento da autorização.</p>
+<p><br />
+Na captura total de uma transação, o somatório dos valores de participação de cada subordinado deverá ser igual ao valor total da transação enviado no momento da autorização.</p>
 
 <p><strong>REQUEST</strong></p>
 
