--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -557,49 +557,34 @@ Para a criação de um novo projeto no Android Studio, <a href="https://develope
 
 <p>Portanto, abaixo disponibilizamos algumas alternativas que podem a vir substituir a ausência desses recursos.</p>
 
-<nav style="display:flex;justify-content:space-between">
-<nav style="max-width:240px;">
-
-### Push-Notifications
-
-Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.
-
-**Alternativa**: JobScheduler
-
-**Descrição**: É uma API para agendar vários tipos de trabalhos contra a estrutura que será executada no próprio processo da sua aplicação. Permitindo a cada ciclo de tempo que o aplicativo realize uma busca em nossos serviços de Backend.
-
-O JobScheduler é o mais indicado devido a performance em relação ao uso de bateria, fora as muitas outras opções que ele disponibiliza (Ex: Job rodar somente quando o smartphone estiver carregando).
-
-Referência: https://developer.android.com/reference/android/app/job/JobScheduler.html
-
+<nav style="display:flex;justify-content:space-between;">
+    <nav style="max-width:240px;">
+        <h3 id="push-notifications">Push-Notifications</h3>
+        <p>Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.</p>
+        <p><strong>Alternativa</strong>: JobScheduler</p>
+        <p><strong>Descrição</strong>: É uma API para agendar vários tipos de trabalhos contra a estrutura que será executada no próprio processo da sua aplicação. Permitindo a cada ciclo de tempo que o aplicativo realize uma busca em nossos serviços de Backend.</p>
+        <p>O JobScheduler é o mais indicado devido a performance em relação ao uso de bateria, fora as muitas outras opções que ele disponibiliza (Ex: Job rodar somente quando o smartphone estiver carregando).</p>
+        <a href="https://developer.android.com/reference/android/app/job/JobScheduler.html">Referência</a>
+    </nav>
+    <nav style="max-width:240px;">
+        <h3 id="serviços-de-localização-gps">Serviços de Localização (GPS)</h3>
+        <p>Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.</p>
+        <p><strong>Alternativa</strong>: Location Manager</p>
+        <p><strong>Descrição</strong>: Essa classe fornece acesso aos serviços de localização do sistema. Esses serviços permitem que os aplicativos obtenham atualizações periódicas da localização geográfica do dispositivo ou que iniciem uma Intenção especificada pela aplicação quando o dispositivo entra na proximidade de uma determinada localização geográfica.</p>
+        <a href="https://developer.android.com/reference/android/location/LocationManager.html">Referência</a>
+    </nav>
+    <nav style="max-width:240px;">
+        <h3 id="serviços-de-mapas">Serviços de Mapas</h3>
+        <p>Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.</p>
+        <p><strong>Alternativa</strong>: MapBox</p>
+        <p><strong>Descrição</strong>: Uma plataforma de mapeamento de código aberto para mapas personalizados. Nossas APIs e SDKs são os blocos de construção para integrar a localização em qualquer aplicativo móvel ou web.</p>
+        <a href="https://www.mapbox.com">Referência</a>
+    </nav>
 </nav>
-<nav style="max-width:240px;">
 
-### Serviços de Localização (GPS)
+<p>Agora que você já tem as informações necessárias para desenvolver um aplicativo para, acesse a documentação da Integração Local para saber como se integrar com o SDK da Cielo LIO.</p>
 
-Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.
-
-**Alternativa**: Location Manager
-
-**Descrição**: Essa classe fornece acesso aos serviços de localização do sistema. Esses serviços permitem que os aplicativos obtenham atualizações periódicas da localização geográfica do dispositivo ou que iniciem uma Intenção especificada pela aplicação quando o dispositivo entra na proximidade de uma determinada localização geográfica.
-
-Referência: https://developer.android.com/reference/android/location/LocationManager.html
-
-</nav>
-<nav style="max-width:240px;">
-
-### Serviços de Mapas
-
-Recurso exclusivo do Google Services, portanto não está presente na Cielo LIO.
-
-**Alternativa**: MapBox
-
-**Descrição**: Uma plataforma de mapeamento de código aberto para mapas personalizados. Nossas APIs e SDKs são os blocos de construção para integrar a localização em qualquer aplicativo móvel ou web.
-
-Referência: https://www.mapbox.com
-
-</nav>
-</nav>
+<p><a href="https://developercielo.github.io/manual/cielo-lio#integração-local">Clique aqui</a></p>
 
 <h1 id="integração-remota">Integração Remota</h1>
 
