--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -788,6 +788,14 @@ No Split Transacional é necessário que o Marketplace envie um “nó” adicio
 </span></code></pre></div></div>
 
 <table>
+  <tbody>
+    <tr>
+      <td> </td>
+    </tr>
+  </tbody>
+</table>
+
+<table>
   <thead>
     <tr>
       <th>Propriedade</th>
