[4da61f88b60fd00c3c74765d915ef6bb2aec439d]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -1821,6 +1821,10 @@ No Split de Pagamentos, o responsável por realizar o repasse dos valores (liqui
       <td><code class="highlighter-rouge">FeeCredit</code></td>
       <td>Lançamento de crédito da Tarifa Fixa acordada entre o Marketplace e a Braspag (Facilitador).</td>
     </tr>
+    <tr>
+      <td><code class="highlighter-rouge">AdjustmentCredit</code></td>
+      <td>Lançamento de um crédito como ajuste</td>
+    </tr>
   </tbody>
 </table>
 
@@ -1845,6 +1849,10 @@ No Split de Pagamentos, o responsável por realizar o repasse dos valores (liqui
     <tr>
       <td><code class="highlighter-rouge">ChargebackDebit</code></td>
       <td>Lançamento de débito de um chargeback.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">AdjustmentDebit</code></td>
+      <td>Lançamento de um débito como ajuste.</td>
     </tr>
   </tbody>
 </table>
