[a7cc160e270f28499a9812fb3cfd9fe24c3c70da]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -2516,6 +2516,18 @@ No Split de Pagamentos o Marketplace pode definir se assumirá o chargeback ou o
   </tbody>
 </table>
 
+<h2 id="notificação">Notificação</h2>
+
+<p><strong>Em breve</strong> será disponibilizado o serviço de notificação que informará os eventos que ocorrem em uma transação de Split:</p>
+
+<ul>
+  <li>Geração de agenda</li>
+  <li>Chargeback</li>
+  <li>Liquidação</li>
+</ul>
+
+<p>Para ser notificado com relação ao status de uma transação, utilize o <a href="https://developercielo.github.io/manual/cielo-ecommerce#post-de-notificação">serviço de notificação</a> da APi Cielo E-Commerce.</p>
+
 </div>
 
 
