[6505abb6cce5a352e3f98f23d34647d264b79f94]: Updated '_i18n/pt/_posts/2017-08-12-split-pagamentos.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -2526,7 +2526,7 @@ No Split de Pagamentos o Marketplace pode definir se assumirá o chargeback ou o
   <li>Liquidação</li>
 </ul>
 
-<p>Para ser notificado com relação ao status de uma transação, utilize o <a href="https://developercielo.github.io/manual/cielo-ecommerce#post-de-notificação">serviço de notificação</a> da APi Cielo E-Commerce.</p>
+<p>Para ser notificado com relação ao status de uma transação, utilize o <a href="https://developercielo.github.io/manual/cielo-ecommerce#post-de-notificação">serviço de notificação</a> da API Cielo E-Commerce.</p>
 
 </div>
 
