[5861edba9db3e02dbdc111a237fae36535a7f445]: Deleted '_i18n/pt/_posts/2017-08-12-pagador-eng.md' via CloudCannon

--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -2508,7 +2508,7 @@ No Split de Pagamentos o Marketplace pode definir se assumirá o chargeback ou o
   </thead>
   <tbody>
     <tr>
-      <td><code class="highlighter-rouge">ChargebackSplitPayments.Split</code></td>
+      <td><code class="highlighter-rouge">ChargebackSplitPayments.ChargebackSplits</code></td>
       <td>Lista contendo a divisão do chargeback para cada participante.</td>
       <td>Guid</td>
       <td>36</td>
@@ -2518,7 +2518,8 @@ No Split de Pagamentos o Marketplace pode definir se assumirá o chargeback ou o
 
 <h2 id="notificação">Notificação</h2>
 
-<p><strong>Em breve</strong> será disponibilizado o serviço de notificação que informará os eventos que ocorrem em uma transação de Split:</p>
+<p><br />
+<strong>Em breve</strong> será disponibilizado o serviço de notificação que informará os eventos que ocorrem em uma transação de Split:</p>
 
 <ul>
   <li>Geração de agenda</li>
