--- a/manual/split-pagamentos.html
+++ b/manual/split-pagamentos.html
@@ -2527,7 +2527,8 @@ No Split de Pagamentos o Marketplace pode definir se assumirá o chargeback ou o
   <li>Liquidação</li>
 </ul>
 
-<p>Para ser notificado com relação ao status de uma transação, utilize o <a href="https://developercielo.github.io/manual/cielo-ecommerce#post-de-notificação">serviço de notificação</a> da API Cielo E-Commerce.</p>
+<p><br />
+Para ser notificado com relação ao status de uma transação, utilize o <a href="https://developercielo.github.io/manual/cielo-ecommerce#post-de-notificação">serviço de notificação</a> da API Cielo E-Commerce.</p>
 
 </div>
 
